--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,6 +1,7 @@
 name: Deploy my Lambda Function
 
-on:
+# trigger on all push events to main branch
+on: 
   push:
     branches:
       - main
@@ -13,17 +14,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
-        with: 
+        with:
           python-version: 3.8
-      - name: Install libs
+      - name: Install libraries
         run: |
-          cd function
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
-      - name: Create zip 
+            cd function
+            python -m pip install --upgrade pip
+            if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
+      - name: Create zip bundle
         run: |
-          cd funciton 
-          zip -r ../${{ github.sha }}.zip .
+            cd function
+            zip -r ../${{ github.sha }}.zip .
       - name: Archive artifact
         uses: actions/upload-artifact@v2
         with:
