--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -48,7 +48,7 @@ jobs:
         run: aws s3 cp ${{ github.sha }}.zip s3://my-bucket-123654321456/${{ github.sha }}.zip
 
   deploy: 
-    runs-on: ubuntu-altest
+    runs-on: ubuntu-latest
     needs: upload
     steps: 
       - name: Configure AWS credentials 
